[package]
name = "CRUD_ACTIX"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
postgres = { version = "0.19.4" }
tokio-postgres = { version = "0.7.8", features=["with-chrono-0_4"]} 
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
config = "0.13.1"
tokio-pg-mapper = { version = "0.2.0" }
chrono = { version = "0.4.26", features = ["serde"] }
tokio-pg-mapper-derive = { version = "0.2.0"}